force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Additional_Loan_Purposes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Additional_Loan_Purposes__c</fullName>
    <description>Users populate this optional multi-picklist field to indicate any additional purposes of the loan. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify additional purposes of the loan.</inlineHelpText>
    <label>Additional Loan Purposes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LLC_BI__Loan_Detail_Purposes</valueSetName>
    </valueSet>
</CustomField>