force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Application_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Application_Method__c</fullName>
    <description>Users populate this optional picklist field to describe how the applicant submits the application. By default, it is empty.</description>
    <inlineHelpText>Select a value to describe which method the applicant uses to submit the application.</inlineHelpText>
    <label>Application Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-person</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>