force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__ApplicationDate__c</fullName>
    <description>Users populate this optional date field to capture the date an application is completed for a loan. By default, the value is blank.</description>
    <inlineHelpText>Date application is completed.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>