force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__APR_Without_Credit_Protection__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__APR_Without_Credit_Protection__c</fullName>
    <description>The system automatically populates this optional percent field to calculate and display the annual percentage rate (APR) without any applied credit protections. By default, it is blank.</description>
    <inlineHelpText>When populated, this field contains the annual percentage rate (APR) without any applied credit protections.</inlineHelpText>
    <label>APR Without Credit Protection</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>