force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Calculated_Balloon_Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Calculated_Balloon_Principal_Amount__c</fullName>
    <description>The system automatically populates this optional currency field to specify the principal portion of a calculated balloon amount. By default, it is blank.</description>
    <inlineHelpText>This field will populate after a user enters a rate and payment stream and an amortization term greater than the loan term. This results in a calculated balloon payment.</inlineHelpText>
    <label>Calculated Balloon Principal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>