force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__DF1071_Reportable__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional field to indicate a loan&apos;s eligibility for Dodd-Frank 1071 compliance reporting. By default, it is empty.</description>
    <inlineHelpText>The system automatically populates this optional field to indicate a loan&apos;s eligibility for Dodd-Frank 1071 compliance reporting. By default, it is empty.</inlineHelpText>
    <label>DF1071 Reportable</label>
    <type>Checkbox</type>
</CustomField>