force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Final_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Final_Payment_Date__c</fullName>
    <description>The system automatically populates this optional date field with the final payment date of the loan.</description>
    <inlineHelpText>This field reflects the date of your final payment on the loan.</inlineHelpText>
    <label>Final Payment Date</label>
    <type>Date</type>
</CustomField>