force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Gross_Charge_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Gross_Charge_Off_Date__c</fullName>
    <description>The user manually populates this date field to indicate the initial date that the loan moves from the Active to Default status. By default, this field is blank.</description>
    <inlineHelpText>This field indicates the initial date loan moves from the Active to Default status.</inlineHelpText>
    <label>Gross Charge Off Date</label>
    <type>Date</type>
</CustomField>