force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Guarantee_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Guarantee_Type__c</fullName>
    <description>Users select from this optional multi-picklist field to indicate which guarantee type(s) apply to the loan. By default, it is empty.</description>
    <inlineHelpText>Select the guarantee type(s) that apply to the loan.</inlineHelpText>
    <label>Guarantee Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>personal_owner</fullName>
                <label>Personal guarantee - owner(s)</label>
            </value>
            <value>
                <fullName>personal_non_owner</fullName>
                <label>Personal guarantee - non-owner(s)</label>
            </value>
            <value>
                <fullName>sba_7a</fullName>
                <label>SBA guarantee - 7(a) program</label>
            </value>
            <value>
                <fullName>sba_504</fullName>
                <label>SBA guarantee - 504 program</label>
            </value>
            <value>
                <fullName>sba_other</fullName>
                <label>SBA guarantee - other</label>
            </value>
            <value>
                <fullName>usda</fullName>
                <label>USDA guarantee</label>
            </value>
            <value>
                <fullName>fha</fullName>
                <label>FHA insurance</label>
            </value>
            <value>
                <fullName>bia</fullName>
                <label>Bureau of Indian Affairs guarantee</label>
            </value>
            <value>
                <fullName>other_federal</fullName>
                <label>Other Federal guarantee</label>
            </value>
            <value>
                <fullName>state_gov</fullName>
                <label>State government guarantee</label>
            </value>
            <value>
                <fullName>local_gov</fullName>
                <label>Local government guarantee</label>
            </value>
            <value>
                <fullName>no_guarantee</fullName>
                <label>No guarantee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>