force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Initial_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Monthly_Payment__c</fullName>
    <description>The system automatically populates this currency field to display the applicant’s monthly payment before the user applies rate discounts to the loan By default, this field is blank.</description>
    <inlineHelpText>This field displays the applicant’s calculated monthly payment without rate discounts applied to the loan.</inlineHelpText>
    <label>Initial Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>