force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Is_Interest_Only__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Interest_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user manually populates this Boolean field to indicate if a loan is Interest Only. By default, this field is false.</description>
    <inlineHelpText>This field indicates if a loan is Interest Only.</inlineHelpText>
    <label>Interest Only Indicator</label>
    <type>Checkbox</type>
</CustomField>