force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <description>A user populates this master-detail relationship to link a Loan Detail record to its corresponding Loan record.</description>
    <inlineHelpText>This master-detail relationship contains the associated Loan record’s Id.</inlineHelpText>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Loan Details</relationshipLabel>
    <relationshipName>Loan_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>