force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Mod_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Mod_Type__c</fullName>
    <description>The system populates this optional picklist field to specify the action type chosen for the corresponding loan.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Borrowing Structure Adjustment</fullName>
            </value>
            <value>
                <fullName>Collateral Adjustment</fullName>
            </value>
            <value>
                <fullName>Rate Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>