force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Preferred_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Preferred_Rate__c</fullName>
    <description>This field is automatically populated when a percentage value is entered into the Rate Discount field on Loan, and represents the discounted interest rate a customer will receive for their loan. This field is calculated as the loan’s Interest Rate minus the Rate Discount. By default, this field is blank.</description>
    <formula>(LLC_BI__Loan__r.LLC_BI__InterestRate__c - LLC_BI__Loan__r.LLC_BI__Rate_Discount__c)</formula>
    <inlineHelpText>This field automatically calculates a customer’s discounted interest rate for a loan.</inlineHelpText>
    <label>Preferred Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>