force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Primary_Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Primary_Loan_Purpose__c</fullName>
    <description>Users populate this optional picklist field to indicate the primary purpose of the loan. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the primary purpose of the loan.</inlineHelpText>
    <label>Primary Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LLC_BI__Loan_Detail_Purposes</valueSetName>
    </valueSet>
</CustomField>