force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Qualifying_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Qualifying_Rate__c</fullName>
    <description>The system automatically populates this optional percentage field to specify the interest rate used to calculate the proposed monthly debt. By default, it is blank.</description>
    <inlineHelpText>This system-populated field displays the interest rate used to calculate proposed monthly debt.</inlineHelpText>
    <label>Qualifying Rate</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>