force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Recovery_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Recovery_Date__c</fullName>
    <description>The user manually populates this date field to indicate the date of loan recovery from nonpayment or default. By default, this field is blank.</description>
    <inlineHelpText>This field indicates the date tied to the loan recovery amount.</inlineHelpText>
    <label>Recovery Date</label>
    <type>Date</type>
</CustomField>