force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Total_Interest_Percentage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Interest_Percentage__c</fullName>
    <description>The system automatically populates this percentage field when the user selects an offer in the Retail Loan Workflow to indicate the total interest the borrower pays over the loan term. The system calculates total interest as a percentage of the loan amount. By default, this field is blank.</description>
    <inlineHelpText>This field indicates the total interest the borrower pays over the loan term as a percentage of the loan amount.</inlineHelpText>
    <label>Total Interest Percentage</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>