force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Total_Principal_Over_5_Years__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Principal_Over_5_Years__c</fullName>
    <description>The system automatically populates this currency field when the user selects an offer in the Retail Loan Workflow to indicate the total principal the borrower pays over the first five years of the loan term. By default, this field is blank.</description>
    <inlineHelpText>This field indicates the total principal the borrower pays over the first five years of the loan term.</inlineHelpText>
    <label>Total Principal Over 5 Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>