force-app/main/default/objects/LLC_BI__Loan_Detail__c/fields/LLC_BI__Use_Preferred_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Use_Preferred_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user manually selects this checkbox field to indicate that the system should calculate the loan using the value entered in the Preferred Interest Rate field. By default, this field is unchecked.</description>
    <inlineHelpText>Select this checkbox to use the Preferred Rate in loan calculations.</inlineHelpText>
    <label>Calculate with Preferred Rate</label>
    <type>Checkbox</type>
</CustomField>